--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="app">
         <div class="app-title">
             <h1>About</h1>
-        <p>This Weather app can keep track of the current weather conditions in your area. It was made by Carl, who is usually bored and spends his spare time creating web applications.</p>
+        <p>This Weather app can keep track of the current weather conditions in your area. </p>
     </div>
     <br>
 
