--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>     
     <!--footer-->
     <div class="footer">
-        <p>&copy; Copyright <a href="https://carlcastanas.netlify.app" style="color:rgb(0, 225, 255);">Carl</a>  2021</p>
+        <p>&copy; <a href="https://www.facebook.com/DellomasJerico" style="color:rgb(0, 225, 255);">Jerico Dellomas</a> </p>
         <style>
             a { text-decoration: none; }
         </style>
